Fixed Catalog Product - Customizable Options label alignment issue

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -680,6 +680,7 @@
             &:not(.admin__field-option):not(.admin__field-group-show-label):not(.admin__field-date) {
                 > .admin__field-label[class] {
                     &:extend(.abs-visually-hidden-reset all);
+                    text-align: left;
                 }
             }
         }
